files/nginx/nginx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
  - name: nginx
    image: "avinashsi/nginx:V1.2"
    imagePullPolicy: Always
    ports:
    - containerPort: 443
      name: https
      protocol: TCP
    readinessProbe:
      tcpSocket:
        port: 443
      initialDelaySeconds: 300
      periodSeconds: 10
    volumeMounts:
    - name: nginx-proxy-config
      mountPath: /etc/nginx/nginx.conf
      subPath: nginx.conf
    - name: nginx-ssl-certs
      mountPath:  /etc/nginx/ssl/
  volumes:
  - name: nginx-proxy-config
    configMap:
      name: nginx-conf
  - name: nginx-ssl-certs
    hostPath:
      path: /home/vagrant/files/ssl/
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: LoadBalancer
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: frontend
