files/nginx/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
spec:
  tls:
    - hosts:
      - mkube.test.com
      secretName: tls-certificate
  rules:
  - host: mkube.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 443
